main page rework content added, sponsors added, fixed colors, fixed speakers separation, removed speaker test from speaker list, collapse schedule added, minor changes

--- a/_sass/conference.scss
+++ b/_sass/conference.scss
@@ -55,6 +55,11 @@ a, a:hover{
   border-radius: 10px;
 }
 
+.buttonSchedule{
+  border: none;
+  box-shadow: none;
+}
+
 video {
   object-fit: cover;
   width: 100vw;
